# Zenline-Project

./: .gitignore  CLAUDE.md  COORDINATION.md  PITCH.md  PITCH_BULLETS.md  README.md  docker-compose.yml  pyproject.toml
data/: source_products_large_appliances.json  source_products_small_appliances.json  source_products_tv_audio.json  target_products_small_appliances.json  target_products_tv_audio.json
matcher/: .env.example  api.py  claude_verify.py  db.py  ean_match.py  embedding_match.py  fuzzy_match.py  main.py  models.py  pipeline.py  requirements.txt  scraper.py  trends.py  vision_match.py
matcher/src/api/: server.py
matcher/src/matching/: ean_matcher.py  fuzzy_matcher.py  llm_matcher.py  pipeline.py
matcher/src/models/: product.py
matcher/src/scraping/: base_scraper.py  cyberport_scraper.py  electronic4you_scraper.py  etec_scraper.py  expert_scraper.py
matcher/src/utils/: data_loader.py
output/: submission_small_appliances.json  submission_tv_audio.json  test_submission.json
scripts/: fetch_data.py  submit.py
web/: app.py
webapp/backend/: pom.xml
webapp/backend/src/main/java/com/zenline/client/: MatcherClient.java
webapp/frontend/: index.html  package-lock.json  package.json
webapp/frontend/src/: App.tsx  AuthContext.tsx  CurrencyContext.tsx  StrategyContext.tsx  i18n.tsx  index.css  main.tsx  strategies.ts
webapp/frontend/src/pages/: Chat.tsx  Dashboard.tsx  Matching.tsx  ProductDetail.tsx  Products.tsx  Scraping.tsx  Trends.tsx
webapp/frontend/src/services/: api.ts
webapp/frontend/src/types/: product.ts
(+13 files in other folders)
